# BlueVM

./: .gitignore  BlueVM  CMakeLists.txt  README.md  func.bv  func_arg.bv  main.c  test.bv  test1.bv
examples/: CMakeLists.txt  common.h  external_function.bv  external_function.c  external_object.bv  external_object.c  global.bv  global.c  library.bv  library.c  parallel.bv  parallel.c  simple.bv  simple.c
examples/cmake/Modules/: FindBlueVM.cmake
examples/js_scripts/: external_function.js  external_object.js  global.js  library.js  parallel.js  simple.js
inc/: BlueVM.h
inc/BlueVM/: bv_array.h  bv_block.h  bv_constant_pool.h  bv_debug.h  bv_error.h  bv_execute.h  bv_function.h  bv_function_pool.h  bv_function_stepper.h  bv_header.h  bv_library.h  bv_name_list.h  bv_object.h  bv_object_info.h  bv_object_pool.h  bv_opcode.h  bv_program.h  bv_scope.h  bv_scope_type.h  bv_stack.h  bv_state.h  bv_string.h  bv_string_table.h  bv_type.h  bv_variable.h  types.h
src/: .bv_block.c.swp  .bv_string.c.swp  bv_array.c  bv_block.c  bv_constant_pool.c  bv_execute.c  bv_function.c  bv_function_pool.c  bv_function_stepper.c  bv_header.c  bv_library.c  bv_name_list.c  bv_object.c  bv_object_info.c  bv_object_pool.c  bv_opcode.c  bv_program.c  bv_scope.c  bv_stack.c  bv_string.c  bv_string_table.c  bv_type.c  bv_variable.c  types.c
